--- a/WPF/Web/Views/AccommodationCard.xaml
+++ b/WPF/Web/Views/AccommodationCard.xaml
@@ -7,7 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              Loaded="UserControlLoaded"
-             Cursor="Hand">
+             Cursor="Hand"
+             Margin="5 5 5 5">
 
     <UserControl.Resources>
 
