--- a/WPF/Web/Views/AccommodationReservationCard.xaml
+++ b/WPF/Web/Views/AccommodationReservationCard.xaml
@@ -7,7 +7,8 @@
              xmlns:converter="clr-namespace:BookingApp.WPF.Utils.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
-             Loaded="UserControlLoaded">
+             Loaded="UserControlLoaded"
+             Margin="5 5 5 5">
 
     <UserControl.Resources>
         <converter:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
