--- a/WPF/Web/Views/CreateReservationPage.xaml
+++ b/WPF/Web/Views/CreateReservationPage.xaml
@@ -7,7 +7,7 @@
       xmlns:converter="clr-namespace:BookingApp.WPF.Utils.Converters"
       xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
       mc:Ignorable="d" 
-      d:DesignHeight="530" d:DesignWidth="850"
+      d:DesignHeight="700" d:DesignWidth="1000"
       Title="CreateReservationPage">
 
     <Page.Resources>
@@ -54,7 +54,7 @@
 
     </Page.Resources>
 
-    <Grid Background="White">
+    <Grid Background="White" Height="700">
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="220"/>
@@ -137,7 +137,7 @@
                 </Grid>
             </Border>
       
-            <StackPanel Grid.Column="1" Orientation="Vertical" Margin="0 50 0 0">
+            <StackPanel Grid.Column="1" Orientation="Vertical" HorizontalAlignment="Center" Margin="0 50 0 0">
                 <WrapPanel Margin="0 10 0 10">
                     <Label Content="Start date" Style="{StaticResource InputLabel}"/>
                     <DatePicker x:Name="datePickerStartDate" VerticalContentAlignment="Center" Width="150" SelectedDateChanged="UpdateSuggestedReservations"/>
