--- a/WPF/Web/Views/GuestMainWindow.xaml
+++ b/WPF/Web/Views/GuestMainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:BookingApp.WPF.Web.Views"
         xmlns:converter="clr-namespace:BookingApp.WPF.Utils.Converters"
         mc:Ignorable="d"
-        Title="GuestMainWindow" Height="650" Width="800"
+        Title="GuestMainWindow" Height="700" Width="1000"
         ResizeMode="NoResize">
 
     <Window.Resources>
@@ -87,7 +87,7 @@
 
     </Window.Resources>
     
-    <Grid>
+    <Grid Background="{StaticResource Beige}">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
@@ -148,7 +148,7 @@
             </StackPanel>
         </Grid>
             
-        <Grid x:Name="gridPages" Height="550" VerticalAlignment="Top" Grid.Row="1">
+        <Grid x:Name="gridPages" VerticalAlignment="Top" Grid.Row="1">
             <Frame x:Name="mainFrame" NavigationUIVisibility="Hidden"/>
         </Grid>
     </Grid>
