--- a/WPF/SignInForm.xaml
+++ b/WPF/SignInForm.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:BookingApp.WPF"
         mc:Ignorable="d"
         Title="Sign in" Height="250" Width="450" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
-    <Grid>
+    <Grid Background="{StaticResource Green}">
 
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
@@ -24,13 +24,16 @@
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
 
-            <Label Grid.Row="0" Grid.Column="0" Height="30">Username:</Label>
-            <Label Grid.Row="1" Grid.Column="0" Height="30">Password:</Label>
-            <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Username, Mode=OneWayToSource}" Height="25" TextWrapping="Wrap" VerticalAlignment="Center"/>
-            <PasswordBox x:Name="passwordBox" Grid.Row="1" Grid.Column="1" Height="25" VerticalAlignment="Center"/>
+            <Label Grid.Row="0" Grid.Column="0" Height="30" Foreground="White" FontSize="15" Content="Username"/>
+            <Label Grid.Row="1" Grid.Column="0" Height="30" Foreground="White" FontSize="15" Content="Password"/>
+            <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Username, Mode=OneWayToSource}" Height="25" TextWrapping="Wrap" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
+            <PasswordBox x:Name="passwordBox" Grid.Row="1" Grid.Column="1" Height="25" VerticalAlignment="Center" VerticalContentAlignment="Center"/>
         </Grid>
         
-        <Button Grid.Row="2" Click="SignIn" Content="Sign in" HorizontalAlignment="Center" VerticalAlignment="Center" Height="30" Width="80"/>
+        <Button Grid.Row="2" Click="SignIn" Content="Sign in" HorizontalAlignment="Center" VerticalAlignment="Center" Height="30" Width="80" 
+                Background="{StaticResource SoftGreen}"
+                FontSize="14"
+                FontWeight="DemiBold"/>
 
     </Grid>
 </Window>
