--- a/WPF/Desktop/Views/TouristHomePage.xaml
+++ b/WPF/Desktop/Views/TouristHomePage.xaml
@@ -88,11 +88,13 @@
                             <Button Style="{StaticResource ButtonStyle}"
                                     Content="Filter"
                                     Margin="0, 0, 5, 0"
-                                    Padding="15, 0"/>
+                                    Padding="15, 0"
+                                    Click="FilterButton_Click"/>
                             <Button Style="{StaticResource ButtonStyle}"
                                     Content="Clear"
                                     Margin="0"
-                                    Padding="15, 0"/>
+                                    Padding="15, 0"
+                                    Click="ClearButton_Click"/>
                         </StackPanel>
                 </Grid>
         </Border>
