--- a/WPF/Tablet/TabletStyles.xaml
+++ b/WPF/Tablet/TabletStyles.xaml
@@ -29,6 +29,12 @@
         <Setter Property="Margin" Value="40,0,20,0"/>
         <Setter Property="FontSize" Value="18" />
     </Style>
+    <Style x:Key="FilterLabel2" TargetType="Label">
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="5,0,5,0"/>
+        <Setter Property="FontSize" Value="18" />
+    </Style>
     <Style x:Key="PageLabel" TargetType="Label">
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="Margin" Value="10"/>
