--- a/WPF/Desktop/Views/CreateRequestWindow.xaml
+++ b/WPF/Desktop/Views/CreateRequestWindow.xaml
@@ -24,6 +24,11 @@
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="Foreground" Value="Black"/>
         </Style>
+        <Style TargetType="TextBlock" x:Key="Info">
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="FontSize" Value="16"/>
+        </Style>
         <Style TargetType="Border" x:Key="BorderStyle">
             <Setter Property="Margin" Value="10"/>
             <Setter Property="BorderBrush" Value="Black"/>
@@ -31,10 +36,10 @@
         </Style>
         <Style TargetType="Button" x:Key="ButtonStyle">
             <Setter Property="Background" Value="#436850"/>
-            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Foreground" Value="{StaticResource Beige}"/>
             <Setter Property="Margin" Value="10"/>
             <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="FontSize" Value="18"/>
+            <Setter Property="FontSize" Value="20"/>
         </Style>
     </Window.Resources>
     <Grid Background="#edeedd">
