--- a/WPF/Tablet/Views/GuideMainWindow.xaml
+++ b/WPF/Tablet/Views/GuideMainWindow.xaml
@@ -17,6 +17,7 @@
         </Grid>
         <Grid DockPanel.Dock="Bottom" Background="{StaticResource SoftGreen}">
             <Frame x:Name="mainFrame" NavigationUIVisibility="Hidden" VerticalAlignment="Center" Height="726"/>
+            <Frame x:Name="additionalFrame" NavigationUIVisibility="Hidden" VerticalAlignment="Bottom" Height="690"/>
             <Frame x:Name="menuBarFrame" NavigationUIVisibility="Hidden" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="674" Width="300"/>
         </Grid>
     </DockPanel>
