--- a/WPF/Desktop/Views/TourRatingWindow.xaml
+++ b/WPF/Desktop/Views/TourRatingWindow.xaml
@@ -5,157 +5,250 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BookingApp.WPF.Desktop.Views"
         mc:Ignorable="d"
-        Title="TourRatingWindow" Height="768" Width="1366">
+        Title="TourRatingWindow"
+        WindowStartupLocation="CenterScreen">
     <Window.Resources>
-        <Style TargetType="TextBox" x:Key="TextBoxStyle">
-            <Setter Property="Width" Value="150"/>
-            <Setter Property="Height" Value="50"/>
-            <Setter Property="Margin" Value="5"/>
+        <Style TargetType="TextBlock" x:Key="HighlightedText">
+            <Setter Property="FontSize" Value="24"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Margin" Value="0, 0, 0, 10"/>
+        </Style>
+        <Style TargetType="TextBlock" x:Key="SmallText">
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="Foreground" Value="Black"/>
+        </Style>
+        <Style TargetType="Border" x:Key="BorderStyle">
+            <Setter Property="Margin" Value="10"/>
+            <Setter Property="BorderBrush" Value="Black"/>
+            <Setter Property="BorderThickness" Value="0.5"/>
         </Style>
         <Style TargetType="Button" x:Key="ButtonStyle">
-            <Setter Property="Background" Value="#88C0D0"/>
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="Width" Value="Auto"/>
-            <Setter Property="Height" Value="Auto"/>
+            <Setter Property="Background" Value="#436850"/>
+            <Setter Property="Foreground" Value="{StaticResource Beige}"/>
+            <Setter Property="Margin" Value="10"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="FontSize" Value="24"/>
+        </Style>
+        <Style TargetType="TextBlock" x:Key="Info">
+            <Setter Property="FontWeight" Value="Bold"/>
             <Setter Property="Margin" Value="5"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
+        <Style TargetType="Image" x:Key="Image">
+            <Setter Property="Height" Value="20"/>
+            <Setter Property="Margin" Value="0, 0, 5, 0"/>
+        </Style>
+        <Style TargetType="Slider" x:Key="Slider">
+            <Setter Property="Minimum" Value="1"/>
+            <Setter Property="Maximum" Value="5"/>
+            <Setter Property="TickFrequency" Value="1"/>
+            <Setter Property="IsSnapToTickEnabled" Value="True"/>
+            <Setter Property="Background" Value="{StaticResource SoftGreen}"/>
+            <Setter Property="Foreground" Value="{StaticResource Green}"/>
         </Style>
     </Window.Resources>
-    <Grid Margin="5">
+    <Grid Background="{StaticResource Beige}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="1.25*"/>
         </Grid.ColumnDefinitions>
 
-        <Border BorderBrush="Black"
-                BorderThickness="1">
-            <Grid Margin="5">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.ColumnSpan="2"
+                   Text="{Binding SelectedTour.Name}"
+                   HorizontalAlignment="Center"
+                   FontSize="24"
+                   FontWeight="Bold"
+                   Margin="10, 5, 10, 10"/>
+            <Grid Grid.Row="1"
+              HorizontalAlignment="Left"
+              Margin="10, 0">
                 <Grid.RowDefinitions>
                     <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
                     <RowDefinition/>
-                    <RowDefinition/>
-                    <RowDefinition/>
                 </Grid.RowDefinitions>
-            <StackPanel Grid.Row="0">
-                <TextBlock FontSize="24">
-                    Guide's knowledge:
-                </TextBlock>
-                <Slider x:Name="KnowledgeSlider" 
-                        Value="{Binding TourReview.KnowledgeGrade,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" 
-                        Minimum="1" 
-                        Maximum="5" 
-                        TickPlacement="BottomRight" 
-                        TickFrequency="1" 
-                        IsSnapToTickEnabled="True"
-                        Width="400"
-                        HorizontalAlignment="Left"/>
-               </StackPanel>
-                <StackPanel Grid.Row="1">
-                    <TextBlock FontSize="24">
-                    Guide's language skill:
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="{StaticResource LocationIcon}"
+                       Style="{StaticResource Image}"/>
+                    <TextBlock Style="{StaticResource Info}">
+                        <TextBlock.Text>
+                            <MultiBinding StringFormat="{}{0}, {1}">
+                                <Binding Path="SelectedTour.Location.City"/>
+                                <Binding Path="SelectedTour.Location.Country"/>
+                            </MultiBinding>
+                        </TextBlock.Text>
                     </TextBlock>
-                    <Slider x:Name="LanguageSkillSlider" 
-                        Value="{Binding TourReview.LanguageGrade,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" 
-                        Minimum="1" 
-                        Maximum="5" 
-                        TickPlacement="BottomRight" 
-                        TickFrequency="1" 
-                        IsSnapToTickEnabled="True"
-                        Width="400"
-                        HorizontalAlignment="Left"/>
                 </StackPanel>
-                <StackPanel Grid.Row="2">
-                <TextBlock FontSize="24">
-                    How interesting was the tour?
-                </TextBlock>
-                <Slider x:Name="InterestSlider" 
-                        Value="{Binding TourReview.InterestGrade,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" 
-                        Minimum="1" 
-                        Maximum="5" 
-                        TickPlacement="BottomRight" 
-                        TickFrequency="1" 
-                        IsSnapToTickEnabled="True"
-                        Width="400"
-                        HorizontalAlignment="Left"/>
-                </StackPanel>
-                <StackPanel Grid.Row="3">
-                    <TextBlock FontSize="24">
-                        Additional comments:
+                <StackPanel Orientation="Horizontal"
+                        Grid.Row="1">
+                    <Image Source="{StaticResource ScheduledIcon}"
+                       Style="{StaticResource Image}"/>
+                    <TextBlock Grid.Row="1"
+                           Style="{StaticResource Info}">
+                        <TextBlock.Text>
+                            <MultiBinding StringFormat="{}{0} - {1}">
+                                <Binding Path="SelectedTour.Beggining"/>
+                                <Binding Path="SelectedTour.End"/>
+                            </MultiBinding>
+                        </TextBlock.Text>
                     </TextBlock>
-                    <TextBox Margin="5" 
-                             Height="80"
-                             Text="{Binding TourReview.Comment}">
-                        
-                    </TextBox>
                 </StackPanel>
-                <WrapPanel Grid.Row="4">
-                    <Button x:Name="PostPhotosButton"
-                            Style="{StaticResource ButtonStyle}"
-                            FontSize="24"
-                            Click="PostPhotosButton_Click">
-                        Post some photos</Button>
-                </WrapPanel>
-                <Button x:Name="ConfirmationButton"
-                        Grid.Row="5"
-                        Width="300"
-                        Margin="20"
-                        Style="{StaticResource ButtonStyle}"
-                        FontSize="32"
-                        Click="ConfirmationButton_Click">
-                    Confirm
-                </Button>
-            </Grid>
-        </Border>
-        
-        <Grid Width="568"
-                  Height="685"
-                  Grid.Column="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <Image Grid.Row="0"
-                       Margin="0, 0, 0, 5"
-                       Source="{Binding SelectedTour.ProfilePictures[0]}"
-                       Width="500">
+                <StackPanel Orientation="Horizontal"
+                        Grid.Row="2">
+                    <Image Source="{StaticResource LanguageIcon}"
+                       Style="{StaticResource Image}"/>
+                    <TextBlock Grid.Row="2"
+                           Text="{Binding SelectedTour.Language.Name}"
+                           Style="{StaticResource Info}"/>
 
-            </Image>
-            <WrapPanel Grid.Row="1"
-                           Margin="0, 0, 0, 5">
-                <Image Margin="2.5, 0, 0, 5"
-                           Source="{Binding SelectedTour.ProfilePictures[1]}"
-                           Width="250">
-
-                </Image>
-                <Image Margin="2.5, 0, 0, 0"
-                           Source="{Binding SelectedTour.ProfilePictures[2]}"
-                           Width="250">
-
-                </Image>
-            </WrapPanel>
-            <Grid Grid.Row="2">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                </Grid.ColumnDefinitions>
-                <StackPanel Width="214"
-                                Grid.Column="0">
-                    <TextBlock Text="{Binding SelectedTour.Name, UpdateSourceTrigger=PropertyChanged}" FontSize="40" FontWeight="Bold"/>
-                    <TextBlock Text="{Binding SelectedTour.LocationTemplate, UpdateSourceTrigger=PropertyChanged}" FontSize="24" FontWeight="Bold"/>
-                    <TextBlock Text="{Binding SelectedTour.LanguageTemplate, UpdateSourceTrigger=PropertyChanged}" FontSize="24" FontWeight="Bold"/>
-                    <TextBlock Text="{Binding SelectedTour.Duration, UpdateSourceTrigger=PropertyChanged}" FontSize="24" FontWeight="Bold"/>
                 </StackPanel>
-                <Border BorderBrush="Black" 
-                            BorderThickness="1"
-                            Grid.Column="1">
-                    <TextBlock  Width="354"
-                                    Height="269"
-                                    Text="{Binding SelectedTour.Description, UpdateSourceTrigger=PropertyChanged}"/>
-                </Border>
+                <StackPanel Orientation="Horizontal"
+                        Grid.Row="3">
+                    <Image Source="{StaticResource Stopwatch}"
+                       Style="{StaticResource Image}"/>
+                    <TextBlock Grid.Row="3"
+                           Text="{Binding SelectedTour.Duration}"
+                           Style="{StaticResource Info}"/>
+
+                </StackPanel>
             </Grid>
+            <Border Style="{StaticResource BorderStyle}"
+                Grid.Row="1"
+                Grid.Column="1"
+                Background="{StaticResource SoftGreen}">
+                <ScrollViewer>
+                    <TextBlock Text="{Binding SelectedTour.Description}"
+                           FontSize="14"
+                           TextWrapping="Wrap"
+                           Margin="5"/>
+                </ScrollViewer>
+            </Border>
+            <Image Source="{Binding SelectedTour.ProfilePictures[0]}"
+               Grid.Row="2"
+               Grid.ColumnSpan="2"
+               Stretch="UniformToFill"
+               Margin="10, 0"/>
+            <Image Source="{Binding SelectedTour.ProfilePictures[1]}"
+               Grid.Row="3"
+               Stretch="UniformToFill"
+               Margin="10, 10, 5, 10"/>
+            <Image Source="{Binding SelectedTour.ProfilePictures[2]}"
+               Grid.Row="3"
+               Grid.Column="1"
+               Stretch="UniformToFill"
+               Margin="5, 10, 10, 10"/>
         </Grid>
 
+        <Border Style="{StaticResource BorderStyle}"
+                Grid.Column="1"
+                Margin="5, 10, 10, 10">
+            <Grid Margin="10, 0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="2*"/>
+                    <RowDefinition Height="1.5*"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+                <StackPanel Grid.Row="0"
+                            Margin="0, 10">
+                    <TextBlock Text="Guide's knowledge:"
+                               Style="{StaticResource HighlightedText}"/>
+                    <Slider Style="{StaticResource Slider}"/>
+                </StackPanel>
+                <StackPanel Grid.Row="1"
+                            Margin="0, 5">
+                    <TextBlock Text="Guide's language skill:"
+                               Style="{StaticResource HighlightedText}"/>
+                    <Slider Style="{StaticResource Slider}"/>
+                </StackPanel>
+                <StackPanel Grid.Row="2"
+                            Margin="0, 5">
+                    <TextBlock Text="How interesting was the tour?"
+                               Style="{StaticResource HighlightedText}"/>
+                    <Slider Style="{StaticResource Slider}"/>
+                </StackPanel>
+                <Grid Grid.Row="3"
+                      Margin="0, 10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Text="Additional comments:"
+                               Style="{StaticResource HighlightedText}"/>
+                    <TextBox Background="{StaticResource SoftGreen}"
+                             VerticalAlignment="Stretch"
+                             Grid.Row="1"
+                             FontSize="16"/>
+                </Grid>
+
+                <Border Grid.Row="4"
+                        Style="{StaticResource BorderStyle}"
+                        Margin="0"
+                        Background="{StaticResource SoftGreen}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition/>
+                        </Grid.ColumnDefinitions>
+                        <Button Content="Post some photos"
+                                Style="{StaticResource ButtonStyle}"
+                                Height="50"
+                                Padding="5, 0"
+                                Command="{Binding AddImageCommand}"/>
+                        <Button Style="{StaticResource ButtonStyle}"
+                                Height="30"
+                                Width="30"
+                                Margin="0"
+                                Grid.Column="1"
+                                Command="{Binding PreviousImageCommand}">
+                            <Image Source="{StaticResource LeftArrowIcon}"
+                                   Height="20"/>
+                        </Button>
+                        <Border Style="{StaticResource BorderStyle}"
+                                Grid.Column="2">
+                            <Image Source="{Binding CurrentImagePath, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"/>
+                        </Border>
+                        <Button Style="{StaticResource ButtonStyle}"
+                                Height="30"
+                                Width="30"
+                                Margin="0"
+                                Grid.Column="3"
+                                Command="{Binding NextImageCommand}">
+                            <Image Source="{StaticResource RightArrowIcon}"
+                                   Height="20"/>
+                        </Button>
+                        <Button Content="Delete"
+                                Style="{StaticResource ButtonStyle}"
+                                Grid.Column="4"
+                                Height="50"
+                                Command="{Binding DeleteImageCommand}"/>
+                    </Grid>
+                </Border>
+
+                <Button Content="Confirm"
+                        Grid.Row="5"
+                        Style="{StaticResource ButtonStyle}"
+                        Margin="200, 10, 200, 10"/>
+            </Grid>
+        </Border>
     </Grid>
 </Window>
