--- a/WPF/Tablet/Views/AddTourPage.xaml
+++ b/WPF/Tablet/Views/AddTourPage.xaml
@@ -58,10 +58,10 @@
         </Button>
 
         <Label Grid.Row="0" Grid.Column="2" Content="Location:"/>
-        <ComboBox Grid.Row="0" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,30,0,0" Width="200" ItemsSource="{Binding locationDTOs}" SelectedItem="{Binding selectedLocationDTO}"  DisplayMemberPath="LocationOptionTemplate"/>
+        <ComboBox Grid.Row="0" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,30,0,0" Width="200" ItemsSource="{Binding locationDTOs}" SelectedItem="{Binding selectedLocationDTO, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"  DisplayMemberPath="LocationOptionTemplate"/>
 
         <Label Grid.Row="2" Grid.Column="2" Content="Language:"/>
-        <ComboBox Grid.Row="2" Grid.Column="3" SelectedIndex="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,30,0,0" Width="100" SelectedValuePath="Tag" ItemsSource="{Binding languageDTOs}" SelectedItem="{Binding selectedLanguageDTO}" DisplayMemberPath="LanguageOptionTemplate"/>
+        <ComboBox Grid.Row="2" Grid.Column="3" SelectedIndex="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50,30,0,0" Width="100" SelectedValuePath="Tag" ItemsSource="{Binding languageDTOs}" SelectedItem="{Binding selectedLanguageDTO, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" DisplayMemberPath="LanguageOptionTemplate"/>
 
         <Label Grid.Row="3"  Grid.Column="0" Content="Dates and Time:"/>
         <Grid Background="White" Grid.Row="3" Grid.RowSpan="2" Grid.Column="1"  Margin="20">
